fixed code block overflow and update gitignore

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -801,13 +801,20 @@ blockquote {
 
 pre {
   padding: 1rem 2rem;
-  overflow-x: auto;
+  overflow: auto;
+  white-space: pre-wrap;
+  word-wrap: break-word;
+  word-break: break-all;
 }
 
 pre code {
   border: 0;
   padding-right: 0;
   padding-left: 0;
+  overflow: auto;
+  white-space: pre-wrap;
+  word-wrap: break-word;
+  word-break: break-all;
 }
 
 table {
